Changes in Release 2.2.1
=============================================
[SIDP-417] - Shib deployed to root web context, SSOProfileHandler forwards to "/null/AuthnEngine"
[SIDP-421] - Error logging SOAP queries
[SIDP-422] - aacli.sh Exception in thread "main" 
[SIDP-427] - Incorrect handling of returned authn error in SSO profile handlers
[SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
[SIDP-431] - Typo in default attribute-resolver.xml
[SIDP-434] - More Typos in Default attribute-resolver.xml
[SIDP-432] - Set explicit caching headers on redirects
[SIDP-436] - Null AuthnContextClassRef causes NPE
[SIDP-447] - Fix for SIDP-417 missed RemoteUserLoginHandler
[SIDP-450] - NPE with AttributeQueryProfile when there are errors resolving attributes
[SIDP-453] - Session inactivity timeout being treated as a hard expiration time

Changes in Release 2.2.0
=============================================
[SIDP-416] - MetadataProviderObserver leak, new one added on every login
[SIDP-415] - SAML name identifier value not logged in audit log
[SIDP-413] - Change link of example login page
[SIDP-411] - Check for loginContext != null at login.jsp
[SIDP-409] - Pass IdP w/o authenticating
[SIDP-407] - Shibboleth SSO profile handler sets incorrect protocol string in outbound message context
[SIDP-403] - Use text/xml as the media type for returned metadata unless user agent request metadata media type
[SIDP-402] - Update 3rd party libraries for 2.2 release
[SIDP-397] - Remove any unit test that won't be fixed in the 2.X branch, fix the rest
[SIDP-396] - Previous session LoginHandler used even if authentication method has expired
[SIDP-392] - NullPointerException in LoginContext when authentication method information is null
[SIDP-388] - Add eduPersonAssurance attribute to attribute-resolver.xml config example
[SIDP-386] - Session indexes not cleared when session is destroyed