@@ -3,6 +3,7 @@ Changes in Release 2.2.1
 [SIDP-417] - Shib deployed to root web context, SSOProfileHandler forwards to "/null/AuthnEngine"
 [SIDP-421] - Error logging SOAP queries
 [SIDP-422] - aacli.sh Exception in thread "main" 
+[SIDP-426] - Forced authentication does not reset the AuthnInstant 
 [SIDP-427] - Incorrect handling of returned authn error in SSO profile handlers
 [SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
 [SIDP-431] - Typo in default attribute-resolver.xml
